[package]
name = "servling"
version = "0.1.0"
edition = "2021"
description = "Core AI agent trait and CLI engine"

[lib]
path = "src/lib.rs"

[dependencies]
# Error handling
anyhow = "1.0"

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system operations
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Temporary files
tempfile = "3.15"

# Logging
log = "0.4"

# Pattern matching for token parsing
regex = "1.11.1"
lazy_static = "1.5.0"
