[package]
name = "servling"
version = "0.1.0"
edition = "2021"
description = "Core AI agent trait and CLI engine"

[lib]
path = "src/lib.rs"

[dependencies]
# Error handling
anyhow = "1.0"

# ACP session transport
agent-client-protocol = { version = "0.10.2", features = ["unstable_session_model"] }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1.48", features = ["macros", "process", "rt", "sync", "time", "io-std", "io-util"] }
tokio-util = { version = "0.7", features = ["compat"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system operations
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }

# Temporary files
tempfile = "3.15"

# Logging
log = "0.4"

# Pattern matching for token parsing
regex = "1.11.1"
lazy_static = "1.5.0"
